modified the home.html

--- a/home.html
+++ b/home.html
@@ -6,6 +6,6 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Home</h1>
+    <h1>Home page must be the most good looking page in my website</h1>
 </body>
 </html>
