--- a/home.html
+++ b/home.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>Home page must be the most good looking page in my website</h1>
-</body>
+    <h2>Services available</h2>
+    <ul>
+        <li>service 1</li>
+        <li>service 2</li>
+        <li>service 3</li>
+        <li>service 4</li>
+    </ul>
 </html>
