Updated home file

--- a/home.html
+++ b/home.html
@@ -14,4 +14,8 @@
         <li>service 3</li>
         <li>service 4</li>
     </ul>
+
+    <footer>
+        <li>Copyright 2023</li>
+    </footer>
 </html>
