Added more changes to the home page

--- a/home.html
+++ b/home.html
@@ -17,5 +17,7 @@
 
     <footer>
         <li>Copyright 2023</li>
+        <li>This is our twitter</li>
+        <li>This is our Instagram</li>
     </footer>
 </html>
